--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.net.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.*?>
+<?import javafx.scene.effect.*?>
+<?import javafx.geometry.*?>
 <?import javafx.scene.media.*?>
 <?import javafx.scene.control.*?>
 <?import java.lang.*?>
@@ -9,33 +14,42 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
+<AnchorPane fx:id="mainAp" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="406.0" prefWidth="700.0" style="-fx-background-color: C0C0C0;" stylesheets="@textArea.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
    <children>
-      <SplitPane dividerPositions="0.8" prefHeight="160.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <SplitPane fx:id="splitter" dividerPositions="0.5" prefHeight="160.0" prefWidth="300.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <items>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+          <AnchorPane minHeight="350.0" minWidth="465.0" prefHeight="290.0" prefWidth="465.0" styleClass="player">
                <children>
-                  <MediaView fx:id="mediaView" fitHeight="325.0" fitWidth="500.0" AnchorPane.bottomAnchor="100.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="25.0" />
-                  <AnchorPane layoutX="11.0" layoutY="404.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0">
+                  <ProgressIndicator fx:id="waitingBar" layoutX="209.0" layoutY="162.0" prefHeight="25.0" prefWidth="25.0" visible="false" AnchorPane.bottomAnchor="243.0" AnchorPane.leftAnchor="209.0" AnchorPane.rightAnchor="221.0" AnchorPane.topAnchor="162.0" />
+                  <MediaView fx:id="mediaView" depthTest="ENABLE" fitHeight="290.0" fitWidth="465.0" styleClass="player" AnchorPane.bottomAnchor="100.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="25.0">
+                     <viewport>
+                        <Rectangle2D />
+                     </viewport></MediaView>
+                  <AnchorPane fx:id="controlPanel" layoutX="8.0" layoutY="353.0" prefHeight="93.0" prefWidth="450.0" style="-fx-background-color: C0C0C0;" AnchorPane.bottomAnchor="-6.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
                      <children>
-                        <Button fx:id="btnPause" layoutX="200.0" layoutY="55.0" mnemonicParsing="false" onAction="#onPause" text="Pause" AnchorPane.bottomAnchor="14.0" />
-                        <Button fx:id="btnNext" layoutX="133.0" layoutY="55.0" mnemonicParsing="false" onAction="#onNext" text="Next" AnchorPane.bottomAnchor="14.0" />
-                        <Button fx:id="btnVolumeUP" layoutX="268.0" layoutY="55.0" mnemonicParsing="false" onAction="#onVolumeUP" text="VolumeUP" AnchorPane.bottomAnchor="14.0" />
-                        <Button fx:id="btnToTime" layoutX="346.0" layoutY="21.0" mnemonicParsing="false" onAction="#onToTime" text="To time" AnchorPane.bottomAnchor="48.0" />
-                        <Slider fx:id="slider" layoutX="3.0" layoutY="1.0" prefHeight="14.0" prefWidth="422.0" AnchorPane.bottomAnchor="79.0" />
-                        <Label fx:id="lblCurretTime" layoutX="8.0" layoutY="29.0" text="0" AnchorPane.bottomAnchor="48.0" />
-                        <Button fx:id="btnStop" layoutX="67.0" layoutY="55.0" mnemonicParsing="false" onAction="#onStop" text="Stop" AnchorPane.bottomAnchor="14.0" />
-                        <TextField fx:id="txtFieldToTime" layoutX="194.0" layoutY="21.0" AnchorPane.bottomAnchor="48.0" />
-                        <Button fx:id="btnPlay" layoutX="3.0" layoutY="55.0" mnemonicParsing="false" onAction="#onPlay" text="Play" AnchorPane.bottomAnchor="14.0" />
-                        <Button fx:id="btnVolumeDown" layoutX="346.0" layoutY="55.0" mnemonicParsing="false" onAction="#onVolumeDown" text="VolumeDown" AnchorPane.bottomAnchor="14.0" />
+                        <Button fx:id="btnPause" layoutX="266.0" layoutY="46.0" mnemonicParsing="false" onAction="#onPause" styleClass="volume-button-holder" text="Pause" AnchorPane.bottomAnchor="14.0" />
+                        <Button fx:id="btnNext" layoutX="178.0" layoutY="46.0" mnemonicParsing="false" onAction="#onNext" text="Next" AnchorPane.bottomAnchor="14.0" />
+                        <Button fx:id="btnVolumeUP" layoutX="370.0" layoutY="46.0" mnemonicParsing="false" onAction="#onVolumeUP" text="VolUP" AnchorPane.bottomAnchor="14.0" />
+                        <Button fx:id="btnToTime" layoutX="310.0" layoutY="20.0" mnemonicParsing="false" onAction="#onToTime" text="To time" AnchorPane.bottomAnchor="48.0" />
+                        <Slider fx:id="slider" layoutX="3.0" layoutY="1.0" majorTickUnit="5.0" max="0.0" minorTickCount="30" onMouseEntered="#onMouseEntered" onMouseExited="#onMouseExited" onMouseMoved="#onMouseMoved" prefHeight="14.0" prefWidth="428.0" styleClass="progress-button" AnchorPane.bottomAnchor="79.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="10.0" />
+                        <Label fx:id="lblCurretTimeSec" layoutX="8.0" layoutY="20.0" prefHeight="17.0" prefWidth="72.0" text="00" AnchorPane.bottomAnchor="56.0">
+                           <styleClass>
+                              <String fx:value="stime" />
+                              <String fx:value="time" />
+                           </styleClass></Label>
+                        <Button fx:id="btnStop" layoutX="89.0" layoutY="46.0" mnemonicParsing="false" onAction="#onStop" prefHeight="33.0" prefWidth="79.0" text="Stop" AnchorPane.bottomAnchor="14.0" />
+                        <TextField fx:id="txtFieldToTime" layoutX="158.0" layoutY="16.0" AnchorPane.bottomAnchor="52.0" />
+                        <Button fx:id="btnPlay" layoutX="4.0" layoutY="46.0" mnemonicParsing="false" onAction="#onPlay" styleClass="play" text="Play" AnchorPane.bottomAnchor="14.0" />
+                        <Button fx:id="btnVolumeDown" layoutX="466.0" layoutY="46.0" mnemonicParsing="false" onAction="#onVolumeDown" text="VolDown" AnchorPane.bottomAnchor="14.0" />
                      </children>
                   </AnchorPane>
-                  <Label fx:id="lblSelected" layoutX="19.0" layoutY="7.0" text="0" />
+                  <Label fx:id="lblSelected" layoutX="4.0" layoutY="7.0" prefHeight="25.0" prefWidth="450.0" style="-fx-background-color: C0C0C0;" styleClass="time" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                  <ImageView fx:id="imgFullScreen" fitHeight="25.0" fitWidth="57.0" layoutX="388.0" onMouseClicked="#onMouseClickedFullScreen" pickOnBounds="true" preserveRatio="true" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="0.0" />
                </children>
             </AnchorPane>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                <children>
-                  <ListView fx:id="listView" layoutX="7.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                  <ListView fx:id="listView" layoutX="7.0" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: C0C0C0;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                </children>
             </AnchorPane>
         </items>
